Revision history for Mandel

0.18
       * Add "builder" support to field

0.17     Mon Apr 14 17:14:45 2014
       * Improved DEBUG mode.

0.16     Sat Mar 22 13:48:14 2014
       * Change use Mandel; will be deprecated
       * Fix annoying perl warning on "use Mandel"

0.15     Wed Mar 12 18:35:49 2014
       * Add more blocking methods
         Contributors: Joel Berger and Alexey Neyasov
         https://github.com/jhthorsen/mandel/pull/9
         https://github.com/jhthorsen/mandel/pull/12

0.14     Wed Mar  5 06:57:04 2014
       * Add Mandel::Document::TO_JSON()
         Contributor: Sebastian Riedel - https://github.com/jhthorsen/mandel/issues/10

0.13     Sun Mar  2 16:25:48 2014
       * Add missing exception handling in HasOne relationship
         Contributor: Sebastian Riedel - https://github.com/jhthorsen/mandel/issues/7
       * Fix $col->remove() received $doc instead of $err in callback
       * Fix documentation error
         Contributor: Alexey Neyasov - https://github.com/jhthorsen/mandel/issues/8

0.12     Thu Feb 20 14:28:55 2014
       * Add _build_data() for $document->data() default values
       * Improved documentation

0.11     Mon Nov 18 10:52:59 2013
       * Change Mandel::Model->field(): %meta need to be a hash-ref
       * Change Mandel::Model->field(): Can retrive meta data for field
       * Add Mandel::Model::Field

0.10     Mon Oct 14 20:20:10 2013
       * Change Mandel::Collection::patch() works on search() arguments
       * Add Mandel::Document->patch for updating partial documents

0.09     Sun Oct 13 18:29:40 2013
       * Improved blocking support
       * Fix Document->remove() and ->save(): Forgot to pass on $err

0.08     Wed Oct  9 21:44:53 2013
       * Add support for setting belongs_to accessor to oid
       * Fix Model->name() was not set when built from documents on disk

0.07     Sun Oct  6 14:46:55 2013
       * Rename Model::add_field() to just field()
       * Rename Document::_raw() to ::data()