@@ -111,13 +111,12 @@ sub id {
 
 =head2 data
 
-Holds the raw mongodb document. It is possible to define default values for
-this attribute by defining a C<_build_data()> method in the sub class. Example:
+  $hash = $self->data;
+  $self = $self->data($hash);
 
-  sub _build_data {
-    my $self = shift;
-    return { age => 0, name => '' };
-  }
+Holds the raw mongodb document. It is possible to define default values for
+this attribute by defining L<builder|Mandel::Model::Field/builder> for the
+fields.
 
 =head2 in_storage
 
